--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<div align=\"center\">   <h1><b>To-do list</b></h1> </div>",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "webpack",
     "start": "webpack serve --open",
     "dev": "webpack serve"
